# afscgap

./: .gitattributes  .gitignore  .pylintrc  .zenodo.json  CITATION.cff  CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  LICENSE.txt  README.md  build_docs.sh  environment.yaml  gruntfile.js  install_browser.sh  mkdocs.yml  package-lock.json  package.json  paper.md  pnpm-lock.yaml  pyproject.toml  setup.cfg
.github/workflows/: build.yml  deploy.yml  docs.yml
afscgap/: README.md  __init__.py  client.py  convert.py  cursor.py  flat.py  flat_cursor.py  flat_http.py  flat_index_util.py  flat_local_filter.py  flat_model.py  http.py  http_util.py  inference.py  model.py  model_util.py  param.py  query.py  query_util.py  typesdef.py  util.py
afscgap/test/: __init__.py  test_client.py  test_convert.py  test_entry.py  test_flat.py  test_flat_cursor.py  test_flat_http.py  test_flat_index_util.py  test_flat_local_filter.py  test_flat_model.py  test_http.py  test_http_util.py  test_inference.py  test_model.py  test_model_util.py  test_query.py  test_query_util.py  test_tools.py  test_util.py
afscgap/test/data/: hauls.csv  limited.json  result_1.json  result_2.json
afscgapviz/: README.md  afscgapviz.py  build_database.py  build_database.sh  data_util.py  load_deps.sh  model.py  requirements.txt  sql_util.py  survey_util.py  util.py
afscgapviz/sql/: create_availability.sql  create_records.sql  create_table.sql  delta.sql  get_common_names.sql  get_species.sql  get_years.sql  insert_record.sql  query.sql  summarize.sql  summarize_compare.sql
afscgapviz/static/css/: viz.css
afscgapviz/static/geojson/: clipped.geojson
afscgapviz/static/js/: afscgapviz.js  display.js  intro.js  mapviz.js  scale.js  species.js  state.js  url.js
afscgapviz/static/test/: qunit-2.19.0.css  qunit-2.19.0.min.js  test.html  test_display.js  test_mapviz.js  test_scale.js  test_species.js  test_url.js
afscgapviz/templates/: example.py_html  species.html  viz.html
afscgapviz/test/: test_afscgapviz.py  test_build_database.py  test_data_util.py  test_model.py  test_sql_util.py  test_util.py
app/: build_database.py
app/sql/: create_table.sql  insert_record.sql
docs/: building.md  inference.md  limitations.md  model.md  objectives.md  usage.md
inst/: README.md  architecture.drawio  paper.bib  paper.md  preview_paper.sh
notebooks/: README.md  cod.ipynb  cod_img.ipynb  requirements.txt
paper/: README.md  paper.bib  paper.md  preview_paper.sh
snapshot/: README.md  check_read.py  combine_shards.py  combine_shards.sh  const.py  execute_all.sh  generate_indicies.py  get_all_years.sh  get_year.sh  index_data.sh  norm_util.py  render_flat.py  request_source.py  requirements.txt  test_combine_shards.py  test_generate_indicies.py  test_norm_util.py  test_render_flat.py  test_request_source.py  test_write_main_index.py  write_main_index.py
website/: README.md  index.html  robots.txt  sitemap.html  terms.html
website/static/css/: base.css
wiki/: inference.md  usage.md
