[project]
name = "afscgap"
version = "0.0.3"
authors = [
  { name="A Samuel Pottinger", email="sam.pottinger@berkeley.edu" },
]
description = "Microlibrary for interacting with the public bottom trawl surveys data from the NOAA AFSC GAP API."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = ["requests ~= 2.28.2"]

[tool.setuptools.package-data]
afscgap = ["py.typed"]

[project.urls]
"Homepage" = "https://schmidtdse.github.io/afscgap/afscgap.html"
"Bug Tracker" = "https://github.com/SchmidtDSE/afscgap/issues"

[project.optional-dependencies]
dev = ["build", "nose2", "mypy", "pyflakes", "pycodestyle", "types-requests", "pdoc", "twine"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
