[project]
name = "afscgap"
version = "2.0.0"
authors = [
  { name="A Samuel Pottinger", email="sam.pottinger@berkeley.edu" },
]
description = "Tools for interacting with the public bottom trawl surveys data from the NOAA AFSC GAP."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering",
]
dependencies = ["requests ~= 2.32.3", "fastavro ~= 1.9.7"]

[tool.setuptools.package-data]
afscgap = ["py.typed"]

[project.urls]
"Homepage" = "https://pyafscgap.org"
"Documentation" = "https://pyafscgap.org/devdocs/afscgap.html"
"Source" = "https://github.com/SchmidtDSE/afscgap"
"Issue Tracker" = "https://github.com/SchmidtDSE/afscgap/issues"
"Changelog" = "https://github.com/SchmidtDSE/afscgap#version-history"

[project.optional-dependencies]
dev = [
  "build",
  "nose2",
  "mypy",
  "pyflakes",
  "pycodestyle",
  "pdoc",
  "twine",
  "types-requests",
  "mkdocs",
  "mkdocs-windmill"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
  ".github",
  "afscgap/test",
  "afscgapviz",
  "notebooks",
  "Dockerfile",
  "website",
  "app"
]
